--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,7 @@
 
         <activity
             android:name=".ui.MainActivity"
+            android:banner="@drawable/tv_banner"
             android:exported="true"
             android:screenOrientation="sensorLandscape">
             <intent-filter>
